sendkey: page|make_key|update user

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -121,3 +121,16 @@ body
     border-radius: 100%;
   }
 }
+
+.top10 {
+  margin-top: 10px;
+}
+.padding50 {
+  padding: 50px;
+}
+.right10 {
+  margin-right: 10px;
+}
+.thetitle {
+  font-size: 20px;
+}
