--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -134,3 +134,10 @@ body
 .thetitle {
   font-size: 20px;
 }
+
+.hr
+{
+  border-bottom: 1px solid #eee;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
